add portrait to about

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: "CK"
-description: Fac, si facis.
+description: Fac, si Facis.
 
 author: Connor Killion
 email: ckillion@berkeley.edu
