--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: "CK"
-description: Fac, si Facis.
+description: fac, si facis.
 
 author: Connor Killion
 email: ckillion@berkeley.edu
@@ -11,7 +11,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://ckillion.me" # the base hostname & protocol for your site
 
 google_analytics_id: UA-118903559-1
-disqus_id:
+disqus_id: facsifacis
 
 # Build settings
 include: [_pages]
